--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,6 +28,9 @@ r.RayTracing=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Method=2
+r.DefaultFeature.MotionBlur=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
